--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ jenkins_prefer_lts: false
 jenkins_connection_delay: 5
 jenkins_connection_retries: 60
 jenkins_home: /var/lib/jenkins
+jenkins_tmpdir: ""
 jenkins_hostname: localhost
 jenkins_http_port: 8080
 jenkins_jar_location: /opt/jenkins-cli.jar
@@ -42,7 +43,7 @@ jenkins_init_changes:
   - option: "JENKINS_OPTS"
     value: "{{ jenkins_options }}"
   - option: "JAVA_OPTS"
-    value: "{{ jenkins_java_options }}"
+    value: "{% if jenkins_tmpdir | length > 0 %} -Djava.io.tmpdir={{ jenkins_tmpdir }} {% endif %}{{ jenkins_java_options }}"
   - option: "JENKINS_HOME"
     value: "{{ jenkins_home }}"
   - option: "JENKINS_PREFIX"
