--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -41,10 +41,30 @@
   retries: 3
   delay: 2
 
+- name: Get plugins current version
+  ansible.builtin.command:
+    cmd: "java -jar {{ jenkins_jar_location }} -s http://{{ jenkins_hostname }}:{{ jenkins_http_port }} -auth {{ jenkins_admin_username }}:{{ jenkins_admin_password }} groovy ="
+    stdin: |
+      import groovy.json.*
+      def d = [:]
+      jenkins.model.Jenkins.instance.getPluginManager().getPlugins().each {
+        d[it.getShortName()] = it.getVersion()
+      }
+      println new JsonBuilder( d ).toString()
+  register: _jenkins_plugins_versions
+  changed_when: false
+  check_mode: false
+
+- name: Set plugins current versions fact.
+  set_fact:
+    jpv: "{{ _jenkins_plugins_versions.stdout | from_json }}"
+  changed_when: false
+  check_mode: false
+
 - name: Install Jenkins plugins using password.
   jenkins_plugin:
     name: "{{ item.name | default(item) }}"
-    version: "{{ item.version | default(omit) }}"
+    version: "{{ item.version | default(jpv[item.name | default(item)] | default(omit)) }}"
     jenkins_home: "{{ jenkins_home }}"
     url_username: "{{ jenkins_admin_username }}"
     url_password: "{{ jenkins_admin_password }}"
