add auth file for jenkin-cli

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,9 @@ jenkins_admin_username: admin
 jenkins_admin_password: admin
 jenkins_admin_password_file: ""
 
+jenkins_scripts_dir: "{{ jenkins_home }}/scripts.d"
+jenkins_auth_file: "{{ jenkins_scripts_dir }}/.auth"
+
 jenkins_process_user: jenkins
 jenkins_process_group: "{{ jenkins_process_user }}"
 
