--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,6 +58,8 @@
   delay: 10
   check_mode: false
 
+- include_tasks: scripts.yml
+
 - name: Remove Jenkins security init scripts after first startup.
   file:
     path: "{{ jenkins_home }}/init.groovy.d/basic-security.groovy"
