--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -43,7 +43,7 @@
 
 - name: Get plugins current version
   ansible.builtin.command:
-    cmd: "java -jar {{ jenkins_jar_location }} -s http://{{ jenkins_hostname }}:{{ jenkins_http_port }} -auth @{{ jenkins_auth_file }} groovy ="
+    cmd: "java -jar {{ jenkins_jar_location }} -s http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix }} -auth @{{ jenkins_auth_file }} groovy ="
     stdin: |
       import groovy.json.*
       def d = [:]
