--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -75,7 +75,9 @@
     url: "http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix }}"
     with_dependencies: "{{ jenkins_plugins_install_dependencies }}"
   with_items: "{{ jenkins_plugins }}"
-  when: jenkins_admin_password | default(false)
+  when: 
+    - jenkins_admin_password | default(false)
+    - item != ''
   notify: restart jenkins
   tags: ['skip_ansible_lint']
   register: plugin_result
