--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -73,6 +73,7 @@
     timeout: "{{ jenkins_plugin_timeout }}"
     updates_expiration: "{{ jenkins_plugin_updates_expiration }}"
     updates_url: "{{ jenkins_updates_url }}"
+    update_json_url_segment: ["update-center.json?id=default&version={{ _jenkins_cmd_version.stdout }}"]
     url: "http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix }}"
     with_dependencies: "{{ jenkins_plugins_install_dependencies }}"
   with_items: "{{ jenkins_plugins }}"
